--- a/style.css
+++ b/style.css
@@ -4,18 +4,21 @@ body {
         padding: 0;
         font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
-    div {
-        width: 600px;
-        margin: 5em auto;
-        padding: 50px;
-        background-color: #fff;
-        border-radius: 1em;
+div {
+    width: 600px;
+    margin: 5em auto;
+    padding: 50px;
+    background-color: #fff;
+    border-radius: 1em;
+}
+.credit {
+    font-size: 0.75em;
+}
+a:link {
+    color: #2E64FE;
+    text-decoration: none;
     }
-    a:link {
-        color: #2E64FE;
-        text-decoration: none;
-        }
-    a:visited {
-        color: #A4A4A4;
-        text-decoration: none;
-        }
+a:visited {
+    color: #A4A4A4;
+    text-decoration: none;
+    }
