--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
-        background-color: #CEE3F6;
+        /* background-color: #CEE3F6; */
+        background-image: url("tv.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
         margin: 0;
         padding: 0;
         font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -8,7 +11,7 @@ div {
     width: 600px;
     margin: 5em auto;
     padding: 50px;
-    background-color: #fff;
+    background: rgba(250, 250, 250, 0.9);
     border-radius: 1em;
 }
 .credit {
