--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
         background-image: url("tv.jpg");
         background-repeat: no-repeat;
         background-size: cover;
+        min-height: 80vh;
         margin: 0;
         padding: 0;
         font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
