--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 body {
-        /* background-color: #CEE3F6; */
         background-image: url("tv.jpg");
         background-repeat: no-repeat;
         background-size: cover;
-        min-height: 80vh;
+        min-height: 100vh;
+        display: flex;
+        flex: 1;
         margin: 0;
         padding: 0;
         font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
 div {
+    display:table;
     width: 600px;
     margin: 5em auto;
     padding: 50px;
