--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,6 +10,7 @@ body {
     color: var(--dark);
     font-family: 'Oswald', sans-serif;
     font-size: 20px;
+    flex-direction: column;
 }
 
 .bio {
@@ -31,6 +32,7 @@ body {
 .logo {
     padding-left: 5px;
     padding-right: 5px;
+    border: 0;
 }
 
 .logo:hover {
@@ -55,4 +57,36 @@ a {
 .link:hover {
     color: var(--dark);
     padding: 1px;
+}
+
+.nav {
+    display: flex;
+    overflow: hidden;
+    align-content: center;
+    justify-content: center;
+}
+
+/* Style the links inside the navigation bar */
+.nav a {
+    color: var(--dark);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+/* Change the color of links on hover */
+.nav a:hover {
+    background-image: linear-gradient(to bottom, var(--dark) 66%, transparent 33%);
+    background-position: 0 2.5em;
+    background-repeat: repeat-x;
+    background-size: 2px 6px;
+}
+
+/* Add a color to the active/current link */
+.nav a.active {
+    background-image: linear-gradient(to bottom, var(--dark) 66%, transparent 33%);
+    background-position: 0 2.5em;
+    background-repeat: repeat-x;
+    background-size: 2px 6px;
 }
